Refactor SkillPathDetails and PowerSkills components for improved state management and clarity
- Replaced useActor with useSelector for accessing game state, enhancing performance and readability.
- Streamlined bumpkin state access in both components, reducing redundancy and improving code maintainability.
- Updated skill checks to directly access properties, simplifying logic and enhancing clarity.
- Improved overall structure and organization of the components for better readability and maintainability.

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -400,7 +400,7 @@
   "bumpkinItemBuff.trident.boost": "20% Chance +1 Fish",
   "bumpkinItemBuff.bucket.o.worms.boost": "+1 Worm",
   "bumpkinItemBuff.luminous.anglerfish.topper.boost": "+50% Fish XP",
-  "bumpkinItemBuff.angler.waders.boost": "+10 Fishing Limit",
+  "bumpkinItemBuff.angler.waders.boost": "+10 daily fishing limit",
   "bumpkinItemBuff.ancient.rod.boost": "Cast without rod",
   "bumpkinItemBuff.banana.amulet.boost": "+0.5 Bananas",
   "bumpkinItemBuff.banana.boost": "-20% Banana Growth Time",
@@ -3887,11 +3887,11 @@
   "skill.moneyTree": "1% chance of finding 200 Coins when chopping trees",
   "skill.treeTurnaround": "10% chance for trees to grow instantly",
   "skill.treeBlitz": "Ability to make all trees instantly grow",
-  "skill.fishermansTwoFold": "+2 Fishing daily limit",
+  "skill.fishermansTwoFold": "+2 daily fishing limit",
   "skill.fishyChance": "10% chance of +1 basic fish",
   "skill.fishyRoll": "10% chance of +1 advanced fish",
   "skill.reelDeal": "-50% rod coin cost",
-  "skill.fishermansFiveFold": "+5 Fishing daily limit",
+  "skill.fishermansFiveFold": "+5 daily fishing limit",
   "skill.fishyFortune": "+50% coins from Corale's deliveries",
   "skill.bigCatch": "Increase bar for catching game",
   "skill.fishyGamble": "10% chance of +1 expert fish",
