Enhance Bumpkin skill tree with new icons and updated descriptions
- Added boosted item icons for various skills, improving visual representation.
- Updated skill descriptions in the dictionary for clarity, including changes to "crimeFruit" and "floweryAbode" effects.
- Adjusted label types and boost icons for several skills to better reflect their functionality.

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3872,7 +3872,7 @@
   "skill.noAxeNoWorries.debuff": "-1 wood from fruit branches",
   "skill.fruityWoody": "+1 wood from fruit branches and stems",
   "skill.pearTurbocharge": "Double Immortal Pear's effect",
-  "skill.crimeFruit": "+10 Tomato and Lemon stock",
+  "skill.crimeFruit": "+10 Tomato and Lemon seeds stock",
   "skill.generousOrchard": "10% chance of +1 patch fruit yield",
   "skill.longPickings.buff": "-50% Apple and Banana growth time",
   "skill.longPickings.debuff": "+100% growth time for all other patch fruits",
@@ -3967,7 +3967,7 @@
   "skill.beeCollective": "+20% Bee Swarm chance",
   "skill.flowerPower": "-20% Flower growth time",
   "skill.floweryAbode.buff": "+0.5 Honey production speed",
-  "skill.floweryAbode.debuff": "-50% Flower growth time",
+  "skill.floweryAbode.debuff": "+50% Flower growth time",
   "skill.petalBlessed": "Ability to make all flowers currently growing ready to be harvested",
   "skill.cropProcessorUnit.buff": "-5% Crop Machine growth time",
   "skill.cropProcessorUnit.debuff": "+10% Oil consumption",
