Implement Bale Economy skill effects for animal produce
- Added tests for Bale Economy skill, ensuring it applies boosts to Milk and Wool production when the player has the skill.
- Centralized Bale boost logic in the animals module to streamline resource yield calculations for Sheep and Cows.
- Updated Bumpkin skill tree to include the new Bale Economy skill with appropriate descriptions and icons.
- Enhanced localization with new translations for the Bale Economy skill effect.

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3905,6 +3905,7 @@
   "skill.efficientFeeding": "-5% feed to feed all animals",
   "skill.restlessAnimals": "-5% Animal sleep time",
   "skill.doubleBale": "Double Bale's Effect",
+  "skill.baleEconomy": "Bale affects milk and wool production",
   "skill.fineFibers": "+0.1 Feather, Leather and Merino Wool yield",
   "skill.bountifulBounties": "+50% Coins from Animal Bounties",
   "skill.heartwarmingInstruments": "+50% Animal XP from Animal Affection tools",
