--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3918,6 +3918,8 @@
   "skill.sheepwiseDiet.debuff": "+50% feed to feed other animals",
   "skill.cowSmartNutrition.buff": "-25% feed to feed Cows",
   "skill.cowSmartNutrition.debuff": "+50% feed to feed other animals",
+  "skill.chonkyFeed.buff": "2x animal xp from animal feed",
+  "skill.chonkyFeed.debuff": "+50% feed to feed all animals",
   "skill.oliveGarden": "+0.2 Olive Yield",
   "skill.riceAndShine": "+0.2 Rice Yield",
   "skill.grapeEscape": "+0.2 Grape Yield",
