[FEAT] Add "Apple-Tastic" skill to Bumpkin skill tree
- Introduced the "Apple-Tastic" skill, enhancing the Bumpkin skill tree with new animal leveling capabilities.
- Defined skill requirements including points, tier, island, and cooldown.
- Added corresponding localization for the skill description in the dictionary.
- Updated the skill tree structure to accommodate the new skill, ensuring consistency with existing skills.

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3920,6 +3920,7 @@
   "skill.cowSmartNutrition.debuff": "+50% feed to feed other animals",
   "skill.chonkyFeed.buff": "2x animal xp from animal feed",
   "skill.chonkyFeed.debuff": "+50% feed to feed all animals",
+  "skill.appleTastic": "Instantly level up all animals for 150 apples",
   "skill.oliveGarden": "+0.2 Olive Yield",
   "skill.riceAndShine": "+0.2 Rice Yield",
   "skill.grapeEscape": "+0.2 Grape Yield",
