Set ChristmasPortal.tsx

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4226,6 +4226,10 @@
   "halloween.noticeboard.three": "At the end of the event, special rewards will be distributed to those with the highest score in the portal!",
   "halloween.noticeboard.four": "The highest scores will receive special limited items, while those with the highest accumulated scores(sum of the best scores for each day of the event) will receive $SFL rewards!",
   "halloween.noticeboard.five": "You can also make donations to the NPC in this island, and a special gift will be given to those who donate 3 $POL or more!",
+  "christmas-delivery-mayhem.portal.title": "Minigame - Christmas Delivery Mayhem",
+  "christmas-delivery-mayhem.portal.description": "Help the elves pack their gifts. Will you have enough time to do it?",
+  "christmas-delivery-mayhem.portal.missionObjectives": "Mission: Reach {{targetScore}}.",
+  "christmas-delivery-mayhem.portal.rewardMessage": "Congratulations, you completed the mission! Here is your reward.",
   "easterEgg.halloweenTorchText": "You feel a strange sensation, as if the forest is calling to you...",
   "leaderboard.empty": "No leaderboard found.",
   "description.cowScratcher": "A rustic yet effective tool, perfect for giving cows a satisfying scratch after a long day in the fields. Keep your cattle happy and content!",
