Refactor Bumpkin skill tree and localization updates
- Changed references from "Fruit" to "Fruit Patch" in the BumpkinRevampSkillTree to improve clarity and consistency.
- Updated skill descriptions in the localization dictionary to reflect the new terminology and enhance understanding of skill effects.
- Swapped the names of "Double Nom" and "Turbo Fry" skills, ensuring correct descriptions and functionality are maintained.
- Adjusted buff and debuff descriptions for various skills to provide clearer information on their effects.

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3863,23 +3863,23 @@
   "skill.hectareFarm.buff": "+1 Basic and Medium crop yield",
   "skill.hectareFarm.debuff": "-0.5 Advanced crop yield",
   "skill.lauriesGains": "Increases Laurie the Chuckle Crow's area of effect (AOE) to a 7x7 area",
-  "skill.fruitfulFumble": "+0.1 fruit patch yield",
+  "skill.fruitfulFumble": "+0.1 fruit yield",
   "skill.fruityHeaven": "-10% fruit seeds cost",
   "skill.fruityProfit": "+50% coins from Tango's deliveries",
   "skill.loyalMacaw": "Double Macaw's effect",
-  "skill.catchup": "-10% patch fruit growth time",
+  "skill.catchup": "-10% fruit growth time",
   "skill.noAxeNoWorries.buff": "Chop fruit branches without axes",
   "skill.noAxeNoWorries.debuff": "-1 wood from fruit branches",
   "skill.fruityWoody": "+1 wood from fruit branches and stems",
   "skill.pearTurbocharge": "Double Immortal Pear's effect",
   "skill.crimeFruit": "+10 Tomato and Lemon seeds stock",
-  "skill.generousOrchard": "10% chance of +1 patch fruit yield",
+  "skill.generousOrchard": "10% chance of +1 fruit yield",
   "skill.longPickings.buff": "-50% Apple and Banana growth time",
-  "skill.longPickings.debuff": "+100% growth time for all other patch fruits",
+  "skill.longPickings.debuff": "+100% growth time for all other fruits",
   "skill.shortPickings.buff": "-50% Blueberry and Orange growth time",
-  "skill.shortPickings.debuff": "+100% growth time for all other patch fruits",
+  "skill.shortPickings.debuff": "+100% growth time for all other fruits",
   "skill.zestyVibes.buff": "+1 Tomato and Lemon yield",
-  "skill.zestyVibes.debuff": "-0.5 all other patch fruit yield",
+  "skill.zestyVibes.debuff": "-0.5 yield for all other fruits",
   "skill.lumberjacksExtra": "+0.1 wood yield",
   "skill.treeCharge": "-10% tree growth time",
   "skill.moreAxes": "+50 axe stock",
@@ -3897,7 +3897,7 @@
   "skill.fishyFortune": "+50% coins from Corale's deliveries",
   "skill.bigCatch": "Increase bar for catching game",
   "skill.fishyGamble": "10% chance of +1 expert fish",
-  "skill.frenziedFish": "+1 fish and 50% chance of +1 fish during fish frenzy",
+  "skill.frenziedFish": "During fish frenzy, +1 fish and 50% chance of +1 fish",
   "skill.moreWithLess.buff": "+10 daily fishing limit",
   "skill.moreWithLess.debuff": "-1 worm from all composters",
   "skill.fishyFeast": "+20% Fish XP",
