[CHORE] Update the Keys Description to Inform Players About the Chests and their Locations

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -1635,9 +1635,9 @@
   "description.farmhand.coupon": "A coupon to exchange for a farm hand of your choice.",
   "description.farmhand": "An adopted Bumpkin on your farm",
   "description.tulip.bulb": "(LEGACY) A ticket used during the Spring Blossom",
-  "description.treasure.key": "Visit the plaza to unlock your reward",
-  "description.rare.key": "Visit the beach to unlock your reward",
-  "description.luxury.key": "Visit the plaza near woodlands to unlock your reward",
+  "description.treasure.key": "A magic key that can unlock the basic chest located in the plaza near Tywin.",
+  "description.rare.key": "A magic key that can unlock the rare chest located in the south of the beach.",
+  "description.luxury.key": "A magic key that can unlock the luxury chest located in the plaza near Bert.",
   "description.prizeTicket": "A prized ticket. You can use it to enter the monthly goblin raffle.",
   "description.babyPanda": "A cute panda from the Gas Hero event. Double experience for beginners during March 2024.",
   "description.baozi": "A delicious treat from the Lunar New Year event.",
