[FIX] Christmas style changes

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -2455,7 +2455,7 @@
   "minigame.playNow": "Play now",
   "minigame.purchase": "Purchase",
   "minigame.chickenRescueHelp": "Can you help me rescue the chickens?",
-  "minigame.discovered.one": "Howdy Bumpkin, you've discovered a portal!",
+  "minigame.discovered.one": "Howdy Bumpkin, you've discovered a portal built by the community.",
   "minigame.discovered.two": "Step into the magical realm to earn rewards and glory. Good luck!",
   "minigame.communityEvent": "Community event",
   "minigame.festivalOfColors": "Festival of colors",
