--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3994,6 +3994,7 @@
   "skill.swiftDecomposer": "-10% compost time",
   "skill.compostingBonanza.buff": "Speed up composters by an additional hour when boosting",
   "skill.premiumWorms": "+10 Rapid Root",
+  "skill.fruitfulBounty": "Double Fruitful Blend's Effect",
   "skill.compostingBonanza.debuff": "2x resources to boost composters",
   "skill.compostingOverhaul.buff": "+2 Worms",
   "skill.compostingOverhaul.debuff": "-5 fertilisers",
