--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3923,6 +3923,7 @@
   "skill.appleTastic": "Instantly level up all animals for 150 apples",
   "skill.victoriasSecretary": "+50% Coins from Victoria's deliveries",
   "skill.glassRoom": "+0.1 Greenhouse produce yield",
+  "skill.seedyBusiness": "-10% Greenhouse seeds cost",
   "skill.oliveExpress": "-10% Olive growth time",
   "skill.riceRocket": "-10% Rice growth time",
   "skill.vineVelocity": "-10% Grape growth time",
