Prepare competition launch

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3742,7 +3742,7 @@
   "deleting.listing": "Deleting listing",
   "selling": "Selling",
   "competition.intro.one": "Howdy Bumpkin...something exciting is happening at Sunflower Land!",
-  "competition.intro.two": "We are hosting a farming competition. It is time to show your skills.",
+  "competition.intro.two": "We are hosting a farming competition to find the best ranchers in the game.",
   "competition.intro.three": "Start farming today and complete the challenges to win prizes.",
   "competition.areYouReady": "Are your ready?",
   "competition.join": "Would you like to join the farmer competition and compete for prizes?",
