[FEAT] Leaderboard updates

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3766,6 +3766,7 @@
   "competition.rules.two": "FSL Points will be distributed to the top 5,000 players, based on their ranking.",
   "competition.rules.three": "SFL will be distributed to the top 5,000 players, based on their ranking.",
   "competition.rules.four": "The leaderboard will be hidden on the last 3 days of the competition.",
+  "competition.rules.five": "Win a bonus prize if you beat Craig, Spencer or Adam.",
   "competition.leaderboard": "Leaderboard",
   "competition.highscore": "Highest Scores ",
   "competition.accumulator": "Accumulated Scores",
