--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -242,10 +242,10 @@
   "description.crimson.carp.boost": "+0.05 猩红宝石",
   "description.crim.peckster.boost": "+0.1 猩红宝石",
   "description.queen.bee.boost": "双倍蜂蜜生产速度",
-  "description.humming.bird.boost": "20% 几率 +1 花卉（单独概率）",
+  "description.humming.bird.boost": "获得 1 次 20% 几率 +1 朵花卉的机会",
   "description.beehive.boost": "当蜂箱已满时，有 10% 几率获得 +0.2 庄稼",
   "description.walrus.boost": "+1 鱼",
-  "description.alba.boost": "50% 几率基础鱼 +1（单独概率）",
+  "description.alba.boost": "获得 1 次 50% 几率基础鱼 +1 的 机会",
   "description.knowledge.crab.boost": "Sprout Mix 增强效果 x2",
   "description.maneki.neko.boost": "每天 1 份免费食物（点击领取）",
   "description.genie.lamp.boost": "实现 3 个愿望",
@@ -274,7 +274,7 @@
   "description.timber.hourglass.boost": "-25% 树木恢复时间（持续 4 小时，请提前放置）",
   "description.hourglass.expired": "您的 {{hourglass}} 已过期。是时候再整一个了！",
   "description.hourglass.running": "这个 {{hourglass}} 能提供下列增益：{{boost}}。",
-  "description.desert.rose.boost": "10% 几率 +1 花卉（单独概率）",
+  "description.desert.rose.boost": "获得 1 次 10% 几率 +1 朵花卉的机会",
   "description.pharaoh.gnome.boost": "+2 温室植物",
   "description.lemon.tea.bath.boost": "-50% 柠檬生长时间",
   "description.tomato.clown.boost": "-50% 番茄生长时间",
@@ -339,8 +339,8 @@
   "bumpkinItemBuff.infernal.pitchfork.boost": "+3 庄稼",
   "bumpkinItemBuff.cattlegrim.boost": "+0.25 牲畜产出",
   "bumpkinItemBuff.corn.onesie.boost": "+0.1 玉米",
-  "bumpkinItemBuff.sunflower.rod.boost": "10% 几率获得 +1 条鱼（单独概率）",
-  "bumpkinItemBuff.trident.boost": "20% 几率获得 +1 条鱼（单独概率）",
+  "bumpkinItemBuff.sunflower.rod.boost": "获得 1 次 10% 几率 +1 条鱼的机会",
+  "bumpkinItemBuff.trident.boost": "获得 1 次 20% 几率获得 +1 条鱼的机会",
   "bumpkinItemBuff.bucket.o.worms.boost": "+1 饵虫",
   "bumpkinItemBuff.luminous.anglerfish.topper.boost": "+50% 鱼 XP",
   "bumpkinItemBuff.ancient.rod.boost": "钓鱼无需鱼竿",
@@ -1068,7 +1068,7 @@
   "description.factionShop.mineralBoost": "-50% 基矿恢复冷却时间，持续 3 小时。",
   "description.factionShop.fruitBoost": "-25% 水果生长时间，持续 6 小时。",
   "description.factionShop.flowerBoost": "-25% 花卉生长时间，持续 4 小时。",
-  "description.factionShop.fishBoost": "50% 几率 +1 鱼（单独概率），持续 4 小时。",
+  "description.factionShop.fishBoost": "获得 1 次 50% 几率 +1 条鱼的机会，持续 4 小时。",
   "description.factionShop.goblinArmor": "狂蛮而张扬，Goblin 每皆赞许的防具。效忠本帮派时，赚得的徽记 +20%。该物品自身加成并不多重叠加。",
   "description.factionShop.goblinHelmet": "坚硬而稳固，为闯荡荒野的无畏冒险而造。效忠本帮派时，赚得的徽记 +10%。该物品自身加成并不多重叠加。",
   "description.factionShop.goblinPants": "这些裤甲兼顾迅捷与 Goblin 精工，为灵巧身手而生。效忠本帮派时，赚得的徽记 +5%。该物品自身加成并不多重叠加。",
@@ -3386,7 +3386,7 @@
   "description.camel": "一只看起来很刻薄的骆驼！",
   "description.tomato.bombard": "Cannonball 的港湾，随时准备攻击任何阻碍它的人",
   "leaderboard.faction.topPlayerPrizes": "每个阵营的前 100 名玩家将获得：",
-  "description.butterfly.boost": "20% 几率 +1 花卉（单独概率）",
+  "description.butterfly.boost": "获得 1 次 20% 几率 +1 朵花卉的机会",
   "description.squirrel.boost": "+0.1 木头",
   "description.fairy.circle.boost": "+0.2 野生蘑菇",
   "description.gold.beetle.boost": "+0.1 黄金",
@@ -3972,7 +3972,7 @@
   "delivery.holiday": "已锁定",
   "delivery.holiday.closingSoon": "这些 Bumpkins 要去度假了…… 在他们离开之前完成订单！",
   "delivery.holiday.closed": "这些 Bumpkins 正在度假…… 稍后再来！",
-  "description.chicory.boost": "10% 几率 +1 花卉（单独概率）",
+  "description.chicory.boost": "获得 1 次 10% 几率 +1 朵花卉的机会",
   "description.chicory": "一种可以在牛市奔跑季节找到的突变花。",
   "description.longhorn.cowfish.boost": "+0.2 牛奶",
   "description.lemon.shark": "一位热情活泼的夏日海域游泳运动员。仅在法老宝藏季节可用。",
@@ -4504,14 +4504,14 @@
   "skill.treeTurnaround": "树木有 10% 的几率立即生长",
   "skill.treeBlitz": "能够让所有树木立即生长",
   "skill.fishermansTwoFold": "+2 每日钓鱼限额",
-  "skill.fishyChance": "10% 几率获得 +1 条基础鱼（单独概率）",
-  "skill.fishyRoll": "10% 几率获得 +1 条高级鱼（单独概率）",
+  "skill.fishyChance": "获得 1 次 10% 几率获得 +1 条基础鱼的机会",
+  "skill.fishyRoll": "获得 1 次 10% 几率获得 +1 条高级鱼的机会",
   "skill.reelDeal": "-50% 钓鱼币成本",
   "skill.fishermansFiveFold": "+5 每日钓鱼上限",
   "skill.fishyFortune": "来自 Corale 配送的硬币 +50%",
   "skill.bigCatch": "增加捕捉游戏的门槛",
-  "skill.fishyGamble": "10% 几率获得 +1 条专家鱼（单独概率）",
-  "skill.frenziedFish": "鱼群狂潮期间 +1 条鱼和 50% 的几率获得 +1 条鱼（单独概率）",
+  "skill.fishyGamble": "获得 1 次 10% 几率获得 +1 条专家鱼的机会",
+  "skill.frenziedFish": "鱼群狂潮期间 +1 条鱼和获得 1 次  50% 的几率获得 +1 条鱼的机会",
   "skill.moreWithLess.buff": "+10 每日钓鱼上限",
   "skill.moreWithLess.debuff": "-1 个来自所有堆肥者的蠕虫",
   "skill.fishyFeast": "+20% 鱼类经验值",
@@ -4571,7 +4571,7 @@
   "skill.buzzworthyTreats": "使用蜂蜜制作的食物经验 +10%",
   "skill.blossomBonding": "赠送鲜花可获得 +2 个关系积分",
   "skill.pollenPowerUp": "授粉后作物产量增加 +0.1（总产量 +0.3）",
-  "skill.petalledPerk": "10% 几率获得 +1 朵花（单独概率）",
+  "skill.petalledPerk": "获得 1 次 10% 几率获得 +1 朵花的机会",
   "skill.beeCollective": "+20% Bee Swarm 几率",
   "skill.flowerPower": "-20% 花朵生长时间",
   "skill.floweryAbode.buff": "+0.5 蜂蜜生产速度",
