Buff fishing limit skills

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3901,16 +3901,16 @@
   "skill.moneyTree": "1% chance of finding 200 Coins when chopping trees",
   "skill.treeTurnaround": "10% chance for trees to grow instantly",
   "skill.treeBlitz": "Ability to make all trees instantly grow",
-  "skill.fishermansTwoFold": "+2 daily fishing limit",
+  "skill.fishermansFiveFold": "+5 daily fishing limit",
   "skill.fishyChance": "10% chance of +1 basic fish",
   "skill.fishyRoll": "10% chance of +1 advanced fish",
   "skill.reelDeal": "-50% rod coin cost",
-  "skill.fishermansFiveFold": "+5 daily fishing limit",
+  "skill.fishermansTenFold": "+10 daily fishing limit",
   "skill.fishyFortune": "+50% coins from Corale's deliveries",
   "skill.bigCatch": "Increase bar for catching game",
   "skill.fishyGamble": "10% chance of +1 expert fish",
   "skill.frenziedFish": "During fish frenzy, +1 fish and 50% chance of +1 fish",
-  "skill.moreWithLess.buff": "+10 daily fishing limit",
+  "skill.moreWithLess.buff": "+15 daily fishing limit",
   "skill.moreWithLess.debuff": "-1 worm from all composters",
   "skill.fishyFeast": "+20% Fish XP",
   "skill.abundantHarvest": "+0.2 Egg, Wool and Milk yield",
