Implement Alternate Medicine

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3922,7 +3922,7 @@
   "skill.bountifulBounties": "+50% Coins from Animal Bounties",
   "skill.heartwarmingInstruments": "+50% Animal XP from Animal Affection tools",
   "skill.kaleMix": "Mixed Grain requires 3 kale to mix instead",
-  "skill.alternateMedicine": "Reduced medicine cost (coming soon)",
+  "skill.alternateMedicine": "Barn Delight requires 1 less Lemon and Honey to mix",
   "skill.healthyLivestock": "-50% chance of sickness",
   "skill.cluckyGrazing.buff": "-25% feed to feed Chickens",
   "skill.cluckyGrazing.debuff": "+50% feed to feed other animals",
