--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4684,6 +4684,13 @@
   "marketplace.about": "About",
   "marketplace.wantToUnlock": "Want to unlock unlimited trades?",
   "marketplace.tradeInitiated": "Great news! It looks like someone is fulfilling your trade. Please wait for the trade to complete.",
+  "marketplace.rewards": "Rewards",
+  "marketplace.trades": "Trades",
+  "marketplace.stats": "Stats",
+  "marketplace.wearables": "Wearables",
+  "marketplace.limited": "Limited",
+  "marketplace.myProfile": "My Profile",
+  "marketplace.budNfts": "Bud NFTs",
   "budBuff.stem.3leafClover.boost": "+0.5 Crop",
   "budBuff.stem.fishHat.boost": "10% Critical Chance +1",
   "budBuff.stem.diamondGem.boost": "+0.2 Mineral",
