[CHORE] Refactor Buff Labels to allow for multiple labels for items with multiple effects

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -233,7 +233,8 @@
   "description.mushroom.house.boost": "+0.2 Wild Mushroom",
   "description.boost.gilded.swordfish": "+0.1 Gold",
   "description.nancy.boost": "-15% Crop Growth Time",
-  "description.scarecrow.boost": "-15% Crop Growth Time; +20% Crop Yield",
+  "description.scarecrow.boost.one": "-15% Crop Growth Time",
+  "description.scarecrow.boost.two": "+20% Crop Yield",
   "description.kuebiko.boost": "-15% Crop Growth Time; +20% Crop Yield; Free Seeds",
   "description.gnome.boost": "+10 Yield to Medium/Advanced Crops (AOE plot below)",
   "description.lunar.calendar.boost": "-10% Crop Growth Time",
