Refactor layout of buff labels to use a column layout for better spacing and readability

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -463,10 +463,14 @@
   "bumpkinItemBuff.ancient.shovel.boost": "Dig treasure without Sand Shovel",
   "bumpkinItemBuff.grape.pants": "+0.2 Grapes",
   "bumpkinItemBuff.pirate.potion": "Unlock Pirate Chest",
-  "bumpkinItemBuff.bumpkin.crown.boost": "+25% SFL & Coin Deliveries, +10% Marks",
-  "bumpkinItemBuff.goblin.crown.boost": "+25% SFL & Coin Deliveries, +10% Marks",
-  "bumpkinItemBuff.nightshade.crown.boost": "+25% SFL & Coin Deliveries, +10% Marks",
-  "bumpkinItemBuff.sunflorian.crown.boost": "+25% SFL & Coin Deliveries, +10% Marks",
+  "bumpkinItemBuff.bumpkin.crown.boost": "+25% SFL & Coin Deliveries",
+  "bumpkinItemBuff.bumpkin.crown.boost.two": "+10% Marks",
+  "bumpkinItemBuff.goblin.crown.boost": "+25% SFL & Coin Deliveries",
+  "bumpkinItemBuff.goblin.crown.boost.two": "+10% Marks",
+  "bumpkinItemBuff.nightshade.crown.boost": "+25% SFL & Coin Deliveries",
+  "bumpkinItemBuff.nightshade.crown.boost.two": "+10% Marks",
+  "bumpkinItemBuff.sunflorian.crown.boost": "+25% SFL & Coin Deliveries",
+  "bumpkinItemBuff.sunflorian.crown.boost.two": "+10% Marks",
   "bumpkinItemBuff.bumpkin.shield.boost": "+0.25 Wood & Minerals",
   "bumpkinItemBuff.goblin.shield.boost": "+0.25 Wood & Minerals",
   "bumpkinItemBuff.nightshade.shield.boost": "+0.25 Wood & Minerals",
