--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4724,7 +4724,7 @@
   "marketplace.myProfile": "My Profile",
   "marketplace.budNfts": "Bud NFTs",
   "budBuff.stem.3leafClover.boost": "+0.5 Crop",
-  "budBuff.stem.fishHat.boost": "10% Critical Chance +1",
+  "budBuff.stem.fishHat.boost": "10% Critical Chance +1 fish",
   "budBuff.stem.diamondGem.boost": "+0.2 Mineral",
   "budBuff.stem.goldGem.boost": "+0.2 Gold",
   "budBuff.stem.minerHat.boost": "+0.2 Iron",
@@ -4749,7 +4749,7 @@
   "budBuff.type.castle.boost": "+0.3 Medium Crops",
   "budBuff.type.port.boost": "+10% Fish XP",
   "budBuff.type.retreat.boost": "+0.2 Animal Produce",
-  "budBuff.type.saphiro.boost": "+10% Crop Speed",
+  "budBuff.type.saphiro.boost": "-10% Crop Growth time",
   "budBuff.type.snow.boost": "+0.3 Advanced Crops",
   "budBuff.type.beach.boost": "+0.2 Fruit",
   "description.bud.generic": "A friendly farming pet that will turbo charge your Sunflower Land farm and gaming experience",
