[FEAT] Quick Select for Fruits (#5009)
* [FEAT] Quick Select for Fruits

* [FEAT] Add setting to disable QuickSelect (#5007)

* Apply Enable Quickselect setting to Fruit Patches

* set quick select to disabled by default

* Add Behaviour Settings

* Put Fruit patch behind feature flag

---------

Co-authored-by: brian-man <36871683+brian-man@users.noreply.github.com>

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -1684,9 +1684,12 @@
   "gameOptions.generalSettings.darkMode": "Dark Mode",
   "gameOptions.generalSettings.lightMode": "Light Mode",
   "gameOptions.generalSettings.appearance": "Appearance",
+  "gameOptions.generalSettings.behaviour": "Behaviour",
   "gameOptions.generalSettings.font": "Font",
   "gameOptions.generalSettings.disableAnimations": "Disable Animations",
   "gameOptions.generalSettings.enableAnimations": "Enable Animations",
+  "gameOptions.generalSettings.disableQuickSelect": "Disable QuickSelect",
+  "gameOptions.generalSettings.enableQuickSelect": "Enable QuickSelect",
   "gameOptions.generalSettings.share": "Share",
   "gameOptions.plazaSettings": "Plaza Settings",
   "gameOptions.plazaSettings.title.mutedPlayers": "Muted Players",
